--- a/publication/2020-dahlmanns-imc-opcua/cite.bib
+++ b/publication/2020-dahlmanns-imc-opcua/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{2020-dahlmanns-imc-opcua,
  author = {Dahlmanns, Markus and Lohmöller, Johannes and Fink, Ina Berenice and Pennekamp, Jan and Wehrle, Klaus and Henze, Martin},
- booktitle = {Proceedings of the Internet Measurement Conference (IMC '20), October 27-29, 2020, Pittsburgh, PA, USA},
+ booktitle = {Proceedings of the Internet Measurement Conference (IMC '20), October 27-29, 2020, Virtual Event, USA},
  doi = {10.1145/3419394.3423666},
  publisher = {ACM},
  state = {accepted},
