Fix publication months

--- a/publication/2020-dahlmanns-imc-opcua/cite.bib
+++ b/publication/2020-dahlmanns-imc-opcua/cite.bib
@@ -2,6 +2,7 @@
  author = {Dahlmanns, Markus and Lohmöller, Johannes and Fink, Ina Berenice and Pennekamp, Jan and Wehrle, Klaus and Henze, Martin},
  booktitle = {Proceedings of the Internet Measurement Conference (IMC '20), October 27-29, 2020, Virtual Event, USA},
  doi = {10.1145/3419394.3423666},
+ isbn = {978-1-4503-8138-3/20/10},
  publisher = {ACM},
  state = {accepted},
  title = {Easing the Conscience with OPC UA: An Internet-Wide Study on Insecure Deployments},
