--- a/publication/2020-pennekamp-parameter-exchange/cite.bib
+++ b/publication/2020-pennekamp-parameter-exchange/cite.bib
@@ -1,6 +1,8 @@
 @inproceedings{2020_pennekamp_parameter_exchange,
  author = {Pennekamp, Jan and Buchholz, Erik and Lockner, Yannik and Dahlmanns, Markus and Xi, Tiandong and Fey, Marcel and Brecher, Christian and Hopmann, Christian and Wehrle, Klaus},
  booktitle = {Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC '20), December 7-11, 2020, Austin, TX, USA},
+ doi = {10.1145/3427228.3427248},
+ isbn = {978-1-4503-8858-0/20/12},
  publisher = {ACM},
  state = {accepted},
  title = {Privacy-Preserving Production Process Parameter Exchange},
