--- a/publication/2020-pennekamp-parameter-exchange/cite.bib
+++ b/publication/2020-pennekamp-parameter-exchange/cite.bib
@@ -3,8 +3,8 @@
  booktitle = {Proceedings of the 36th Annual Computer Security Applications Conference (ACSAC '20), December 7-11, 2020, Austin, TX, USA},
  doi = {10.1145/3427228.3427248},
  isbn = {978-1-4503-8858-0/20/12},
+ pages = {510-525},
  publisher = {ACM},
- state = {accepted},
  title = {Privacy-Preserving Production Process Parameter Exchange},
  year = {2020}
 }
