--- a/publication/2023-lorz-cired/cite.bib
+++ b/publication/2023-lorz-cired/cite.bib
@@ -2,7 +2,7 @@
  author = {Lorz, Tobias and Jaeger, Johann and Selimaj, Antigona and Hacker, Immanuel and Ulbig, Andreas and Heckel, Jan-Peter and Becker, Christian and Dahlmanns, Markus and Fink, Ina Berenice and Wehrle, Klaus and Erichsen, Gerrit and Schindler, Michael and Luxenburger, Rainer and Lin, Guosong},
  booktitle = {Proceedings of the International Conference
 & Exhibition on Electricity Distribution (CIRED) 2023},
- title = {Interconnected Grid Protection Systems &ndash; Reference Grid For Testing An Adaptive Protection Scheme},
+ title = {Interconnected Grid Protection Systems - Reference Grid For Testing An Adaptive Protection Scheme},
  year = {2023}
 }
 
